--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,9 @@
 fastapi==0.111.0
-uvicorn[standard]==0.30.0
-python-dotenv==1.0.1
-SQLAlchemy==2.0.30
-alembic==1.13.2
-pydantic==2.7.4
-pydantic-settings==2.3.3
+uvicorn[standard]==0.30.3
+gunicorn==21.2.0
+sqlalchemy==2.0.32
+pydantic==2.8.2
 passlib[bcrypt]==1.7.4
-python-jose==3.3.0
-email-validator==2.2.0
-httpx==0.27.0
-docker==7.1.0
-stripe==10.8.0
+bcrypt==4.1.2
+python-jose[cryptography]==3.3.0
+google-auth==2.33.0
