--- a/hub-frontend/package.json
+++ b/hub-frontend/package.json
@@ -5,7 +5,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.12.2",
+    "@clerk/nextjs": "^6.36.7",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lightweight-charts": "^4.2.3",
