--- a/hub-frontend/package.json
+++ b/hub-frontend/package.json
@@ -22,6 +22,8 @@
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
     "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.4.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.10",
     "typescript": "5.9.2"
