--- a/hub-frontend/.env.example
+++ b/hub-frontend/.env.example
@@ -20,7 +20,7 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/register
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
+NEXT_PUBLIC_CLERK_JWT_TEMPLATE=default
 
 ## Analytics (optional)
 NEXT_PUBLIC_GA_ID=G-XXXXXXX
-
