--- a/hub-frontend/package.json
+++ b/hub-frontend/package.json
@@ -5,7 +5,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.36.7",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lightweight-charts": "^4.2.3",
